...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.inicioSesion.Login_Activity">

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordEditText"
        android:layout_marginTop="31dp"
        android:backgroundTint="#8BC34A"
        android:text="@string/login_button" />

    <Button
        android:id="@+id/registerButton"
...
        android:layout_below="@+id/loginButton"
        android:layout_marginTop="31dp"
        android:backgroundTint="#8BC34A"
        android:text="@string/text_registrarse" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_Titulo"
        android:layout_marginTop="97dp"
        android:hint="@string/username_hint" />

...
