<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/crear_campamento"
        android:icon="@drawable/icon_tareas"
        android:title="@string/menu_crear_campamento" />
    <item
        android:id="@+id/perfil_coordinador"
        android:icon="@drawable/icon_account"
        android:title="@string/menu_perfil" />

</menu>
